tests/data/errors/simple/input.py

x = 2

x =

1 // 0

y = 2

raise ValueError("Foo")
